<resources>
    <string name="app_name">طفولة</string>
    <string name="here">Ici</string>
    <string name="videoLabel">Vous pouvez signaler avec vidéo</string>
    <string name="imageLabel">Vous pouvez signaler par image</string>
    <string name="video">La Vidéo</string>
    <string name="image">L\'image</string>
    <string name="videoDesc">Brève explication de la vidéo</string>
    <string name="imageDesc">Brève explication de l\'image</string>
    <string name="write">Écrivez ici ...</string>
    <string name="plusInfos">Plus d\'informations</string>
    <string name="send">Envoyer</string>
    <string name="soundLabel">Vous pouvez signaler le signalement audio</string>
    <string name="audio">Enregistrement Audio</string>
    <string name="audioDesc">Brève explication de l\'enregistrement</string>
    <string-array name="motifs">
        <item>فقدان الطفل لوالديه وبقائه دون سند عائلي</item>
        <item>تعريض الطفل للإهمال أو التشرد</item>
        <item>المساس بحقه في التعليم</item>
        <item>التسول بالطفل أو تعريضه للتسول</item>
        <item>عجز من يقوم برعاية الطفل عن التحكم في تصرفاته</item>
        <item>التقصير البين والمتواصل في التربية والرعاية</item>
        <item>سوء معاملة الطفل</item>
        <item>الطفل ضحية جريمة من ممثله الشرعي</item>
        <item>الطفل ضحية جريمة من أي شخص آخر</item>
        <item>الاستغلال الجنسي للطفل بمختلف أشكاله</item>
        <item>الاستغلال الاقتصادي للطفل</item>
        <item>وقوع الطفل ضحية نزاعات مسلحة</item>
    </string-array>
    <string-array name="wilayas">
        <item>Adrar</item>
        <item>Chlef</item>
        <item>Laghouat</item>
        <item>Oum El Bouaghi</item>
        <item>Batna</item>
        <item>Béjaïa</item>
        <item>Biskra</item>
        <item>Béchar</item>
        <item>Blida</item>
        <item>Bouïra</item>
        <item>Tamanrasset</item>
        <item>Tébessa</item>
        <item>Tlemcen</item>
        <item>Tiaret</item>
        <item>Tizi Ouzou</item>
        <item>Algiers</item>
        <item>Djelfa</item>
        <item>Jijel</item>
        <item>Sétif</item>
        <item>Saïda</item>
        <item>Skikda</item>
        <item>Sidi Bel Abbès</item>
        <item>Annaba</item>
        <item>Guelma</item>
        <item>Constantine</item>
        <item>Médéa</item>
        <item>Mostaganem</item>
        <item>M\'Sila</item>
        <item>Mascara</item>
        <item>Ouargla</item>
        <item>Oran</item>
        <item>El Bayadh</item>
        <item>Illizi</item>
        <item>Bordj Bou Arréridj</item>
        <item>Boumerdès</item>
        <item>El Tarf</item>
        <item>Tindouf</item>
        <item>Tissemsilt</item>
        <item>El Oued</item>
        <item>Khenchela</item>
        <item>Souk Ahras</item>
        <item>Tipaza</item>
        <item>Mila</item>
        <item>Aïn Defla</item>
        <item>Naâma</item>
        <item>Aïn Témouchent</item>
        <item>Ghardaïa</item>
        <item>Relizane</item>
    </string-array>
    <string-array name="gender">
        <item>Féminin</item>
        <item>Masculin</item>
    </string-array>
    <string name="textstart">معا لحماية الطفولة</string>
    <string name="bienvenue">مرحبا بكم</string>
    <string name="appdesc">هذا التطبيق مخصص للتبليغ عن تعديات على حقوق الأطفال</string>
    <string name="start">ابدا تجربتك</string>
    <string name="onppe">الهيئة الوطنية لحماية وترقية الطفولة</string>
    <string name="choixfonction">Veuillez choisir l\'un des services suivants</string>
    <string name="signalement">Signalements</string>
    <string name="conseil">Informations Générales</string>
    <string name="menusignaler">Signaler</string>
    <string name="menuaide">Aide</string>
    <string name="bienvenu">Bienvenue</string>
    <string name="signaldesc">Signalez tout danger qui touche l\'enfant!</string>
    <string name="methode">Quelle méthode voulez-vous utiliser ?</string>
    <string name="formulaire">Remplir un formulaire</string>
    <string name="image2">Image</string>
    <string name="video2">Vidéo</string>
    <string name="audio2">Vocal</string>
    <string name="suivisignal">Suivi signalements</string>
    <string name="merci">Merci infiniment</string>
    <string name="finform">Votre signalement a été enregistrée avec succès. Merci pour votre aide.</string>
    <string name="finformsanscnx">Votre signalement sera envoyé dès que vous serez en ligne. Nous vous remercions de votre collaboration.</string>
    <string name="suivinonsignal">Vous pouvez suivre vos signalements</string>
    <string name="nonsignal">Vous n\'avez pas de signalements à suivre</string>
    <string name="champs">Veuillez remplir les champs marqués d\'un *</string>
    <string name="video30">La vidéo sélectionnée doit être inférieure ou égale à 30 secondes</string>
    <string name="age18">Le signalement est limité aux enfants de moins de 18 ans!</string>
    <string name="etat">État :</string>
    <string name="info">Informations sur l\'enfant mis en risque</string>
    <string name="infosignal">Informations du signalement</string>
    <string name="nomcomplet">Nom complet :</string>
    <string name="sexe">Sexe :</string>
    <string name="age">Age :</string>
    <string name="etatfamille">Situation familiale des parents :</string>
    <string name="adresse">Adresse :</string>
    <string name="wilaya">Wilaya :</string>
    <string name="motif">Motif de signalement :</string>
    <string name="date">Date de l\'incident :</string>
    <string name="contenu">Contenu du signalement :</string>
    <string name="titre_signaleur">Entrez vos informations</string>
    <string name="age_form">Age *</string>
    <string name="sexe_signaleur">Sexe *</string>
    <string name="adresse_signaleur">Adresse *</string>
    <string name="prenom_signaleur">Prénom *</string>
    <string name="nom_signaleur">Nom *</string>
    <string name="numtel">Numéro de téléphone *</string>
    <string name="back">Précédent</string>
    <string name="next">Suivant</string>
    <string name="titre_enfant">Identification de l\'enfant en danger</string>
    <string name="prenom_enfant">Prénom</string>
    <string name="nom_enfant">Nom</string>
    <string name="situation_parent">Situation familiale des parents</string>
    <string name="autre">Autre</string>
    <string name="veuf">Veuf(ve)</string>
    <string name="divorces">Divorcés</string>
    <string name="marier">Mariés</string>
    <string name="adresse_enfant">Adresse</string>
    <string name="wilaya_form">Wilaya</string>
    <string name="titre_infos">Veuillez entrer les informations du signalement</string>
    <string name="motifinfo">Motif du signalement *</string>
    <string name="dateincident">Date de l\'incident</string>
    <string name="dateinfo">Jour/Mois/Année</string>
    <string name="lieudanger">Lieu où se trouve l\'enfant en danger *</string>
    <string name="descriptif">Description du signalement</string>
    <string name="contenu_descriptif">Description du signalement, avec une brève explication...</string>
    <string name="fichier">Joindre un fichier</string>
    <string name="confirmer">Envoyer</string>
    <string name="localisation">Pour une meilleure gestion de votre signalement, veuillez activer la fonctionnalité de localisation</string>
    <string name="helpmain">Ici, vous pouvez envoyer votre signalement en remplissant le formulaire ou en le joignant avec une photo, une vidéo ou un vocal.\nVous pouvez également suivre l\'état des signalements.l\'ONPPE s\'engage à conserver les informations personnelles du notifiant et à ne les partager avec personne.</string>
    <string name="helpvoice">Ici, vous pouvez envoyer votre signalement sous la forme d\'un enregistrement audio avec la nécessité de remplir quelques informations supplémentaires dans le formulaire par la suite.</string>
    <string name="helpform">Afin d\'envoyer votre signalement, veuillez remplir les informations de ce formulaire en toute crédibilité.
        Si vous ne connaissez l\'age de l\'enfant, veuillez donner un age approximatif.
        Dans le cas ou vous n\'avez pas Internet, l\'application l\'enverra dès que vous serez connecté.</string>
    <string name="helpimage">Ici, vous pouvez envoyer votre signalement sous forme d\'image en la téléchargeant ou en la prenant directement avec la nécessité de remplir le formulaire par la suite.</string>
    <string name="helpsuivi">Ici, vous pouvez suivre les signalements que vous avez faites.Vous recevrez une notification lorsqu\'il y aura un développement dans l\'un d\'entre eux</string>
    <string name="helpvideo">Ici, vous pouvez envoyer votre signalement sous forme de vidéo en la téléchargeant ou en la capturant directement avec la nécessité de remplir le formulaire par la suite.</string>
    <string name="text_app">Vous pouvez consulter des informations sur notre application.</string>
    <string name="yourtext">    L\'application "Enfance" offre un mécanisme facile et flexible pour envoyer des signalements concernant les enfants en danger en Algérie.\n\n  Elle permet aux utilisateurs d\'envoyer des signalements via des photos, des vidéos, des enregistrements audio, des formulaires, et de contacter directement les autorités compétentes.\n\n   L\'application fonctionne 24 heures sur 24 et est disponible dans les 58 wilayas d\'Algérie.\n\n    Les utilisateurs peuvent envoyer des signalements à tout moment, que ce soit le jour ou la nuit, quel que soit leur emplacement géographique.\n\n   Lorsque l\'application reçoit les signalements, ils sont directement transmis à l\'Organe Nationale de Protection et de Promotion de l\'Enfance pour évaluation de la situation et prise des mesures nécessaires.\n\n   Les utilisateurs peuvent également contacter directement les autorités compétentes pour obtenir une assistance immédiate et communiquer avec les autorités de sécurité, judiciaires et les institutions sociales compétentes.\n\n  De plus, l\'application propose des formulaires pour renforcer les détails et fournir des informations supplémentaires sur les cas. Cela aide l\'Organe Nationale à prendre des mesures appropriées avec précision et exhaustivité.\n\n
Cette application mobile ainsi que le site web pour la gestion interne ont été développés par une équipe d\'étudiants de l\'école nationale supérieur d\'informatique : \n
- Bentaleb Fanel \n
- BELGUENBOUR Walid \n
- HAMITOUCHE Monsef \n
- SLIMANE Dounia Amina \n
- SOUAMES Ikram \n
- SIAHMED MASSINISSA \n
- TOUBAL Kamelia \n
- LOUZZANI Hiba \n
- MERROUCHI Nesrine \n

    </string>
    <string name="textsupp">Ici  vous pouvez consulter des informations supplémentaires</string>
    <string name="droits">Droits de l\'enfant</string>
    <string name="organisme">A propos de l\'organe</string>
    <string name="app">A propos de l\'application </string>
</resources>